--- a/analysis/boxplot.Rmd
+++ b/analysis/boxplot.Rmd
@@ -1,25 +1,21 @@
-# Analysis of Data
-This is an example for plotting boxplots using ggplot2. Bin He, 2020-04-15
+## Analysis of Data
 
 ```{r plotting}
 # load required libraries
 library(tidyverse) # require() and library() achieve the same thing
-
-# Import Data
-Pn_Ps <- read_tsv("PnPs_results.txt", header=TRUE) # use the tidyverse version
-
-# goal: boxplot to show individual histone genes (H2A, H2B, H3, & H4) pn/ps ratios with in the same ploidy
-# sorting data -- no need, Bin He --
-#Pn_Ps.1 <- select(Pn_Ps,Ploidy,Histone,pn_ps)
-#View(Pn_Ps.1)
-#Pn_Ps.1.1 <- filter(Pn_Ps.1, Ploidy == 2)
-#View(Pn_Ps.1.1)
-#Pn_Ps.1.2 <- filter(Pn_Ps.1, Ploidy == 3)
-#View(Pn_Ps.1.2)
-#Pn_Ps.1.3 <- filter(Pn_Ps.1, Ploidy == 4)
-#View(Pn_Ps.1.3)
-# -- end commenting out --
-
-# creating boxplots 
-ggplot(data = Pn_Ps, aes(x = Histone, y= pn_ps, color = Ploidy)) + geom_boxplot() + ggtitle("Pn/Ps of Histone gene in 2n Lineages")
 ```
+# Import Data
+```
+Pn_Ps <- read_tsv("PnPs_results.txt", col_types = "cfcddd")
+view(Pn_Ps)
+Dn_Ds <- read_tsv("DnDs_results.txt", col_types = "cfcddd")
+view(Dn_Ds)
+```
+# Creating Boxplots
+```
+Pn_Ps %>% ggplot(aes(x = Histone, y = pn_ps, color = Ploidy)) + geom_boxplot()+ theme_classic() + ggtitle("Pn/Ps of Histone genes per Ploidy") + scale_color_manual(values = c("red","blue","yellow")) 
+Dn_Ds %>% ggplot(aes(x = Histone, y = dn_ds, color = Ploidy)) + geom_boxplot()+ theme_classic() + ggtitle("Dn/Ds of Histone genes per Ploidy") + scale_color_manual(values = c("red","blue","yellow")) 
+```
+Since values did not change much between Pn/Ps and Dn/Ds and both graphs represent almost the exact some results, only a statical test was ran on Dn/Ds results. 
+
+# Stastical test 
