--- a/analysis/boxplot.Rmd
+++ b/analysis/boxplot.Rmd
@@ -17,6 +17,10 @@ view(Dn_Ds)
 Pn_Ps %>% ggplot(aes(x = Histone, y = pn_ps, color = Ploidy)) + geom_boxplot()+ theme_classic() + ggtitle("Pn/Ps of Histone genes per Ploidy") + scale_color_manual(values = c("red","blue","yellow")) 
 Dn_Ds %>% ggplot(aes(x = Histone, y = dn_ds, color = Ploidy)) + geom_boxplot()+ theme_classic() + ggtitle("Dn/Ds of Histone genes per Ploidy") + scale_color_manual(values = c("red","blue","yellow")) 
 ```
-Since values did not change much between Pn/Ps and Dn/Ds and both graphs represent almost the exact some results, only a statical test was ran on Dn/Ds results. 
+Since values did not change much between Pn/Ps and Dn/Ds and both graphs represent almost the exact some results, only Dn/Ds was use to create the second graph comparing sexual vs asexaul reproduction (instead of Ploidy)
+```
+dnds %>% ggplot(aes(x = Histone, y = dn_ds, color = Mode)) + geom_boxplot() + theme_classic() + scale_color_manual(values = c("blue","red")) + ggtitle("Dn/Ds between Sexual and Asexual lineages among Histone Genes")
+```
 
 # Stastical test 
+only a statical test was ran on Dn/Ds results. 
