--- a/analysis/boxplot.Rmd
+++ b/analysis/boxplot.Rmd
@@ -1,10 +1,10 @@
-## Analysis of Data
+# Analysis of Data
 
 ```{r plotting}
 # load required libraries
 library(tidyverse) # require() and library() achieve the same thing
 ```
-# Import Data
+## Import Data
 ```
 setwd("~/Documents/Histone Data/GitHub/biol-4386-project-Lspeight/output")
 Pn_Ps <- read_tsv("PnPs_results.txt", col_types = "cfcddd")
@@ -12,13 +12,56 @@ view(Pn_Ps)
 Dn_Ds <- read_tsv("DnDs_results.txt", col_types = "cfcddd")
 view(Dn_Ds)
 ```
-# Creating Boxplots
-## Creating Figure 1 and Figure 2
+### Creating Figure 1 and Figure 2
 ```
 Pn_Ps %>% ggplot(aes(x = Histone, y = pn_ps, color = Ploidy)) + geom_boxplot()+ theme_classic() + ggtitle("Pn/Ps of Histone genes per Ploidy") + scale_color_manual(values = c("red","blue","yellow")) 
 Dn_Ds %>% ggplot(aes(x = Histone, y = dn_ds, color = Ploidy)) + geom_boxplot()+ theme_classic() + ggtitle("Dn/Ds of Histone genes per Ploidy") + scale_color_manual(values = c("red","blue","yellow")) 
 ```
-## Creating Figure 3
+### Statistical Test
+To test if there was a signifcant difference in dn/ds distribution between the three ploidies of each histone gene in Figure 2, A Kruskal-Wallis rank sum test was performed for each histone gene. A test was also perfomred for the over all distribution between the three ploidies (graph not created). 
+```
+DNDS<- select(Dn_Ds, "Ploidy", "Histone", "dn_ds")
+# Test on H2A
+H2A <- filter(DNDS, Histone == "H2A")
+kruskal.test(dn_ds ~ Ploidy, data = H2A)
+
+	Kruskal-Wallis rank sum test
+
+data:  dn_ds by Ploidy
+H2B <- filter(DNDS, Histone == "H2B")
+Kruskal-Wallis chi-squared = 3.1215, df = 2, p-value = 0.21
+# Test on H2B
+kruskal.test(dn_ds ~ Ploidy, data = H2B)
+
+	Kruskal-Wallis rank sum test
+
+data:  dn_ds by Ploidy
+Kruskal-Wallis chi-squared = 6.7804, df = 2, p-value = 0.0337
+# Test on H3
+H3 <- filter(DNDS, Histone == "H3")
+kruskal.test(dn_ds ~ Ploidy, data = H3)
+
+	Kruskal-Wallis rank sum test
+
+data:  dn_ds by Ploidy
+Kruskal-Wallis chi-squared = 2.9449, df = 2, p-value = 0.2294
+# Test on H4
+H4 <- filter(DNDS, Histone == "H4")
+kruskal.test(dn_ds ~ Ploidy, data = H4)
+
+	Kruskal-Wallis rank sum test
+
+data:  dn_ds by Ploidy
+Kruskal-Wallis chi-squared = 3.5688, df = 2, p-value = 0.1679
+# Test on all Histone genes between ploidies 
+kruskal.test(dn_ds ~ Ploidy, data = DNDS)
+
+	Kruskal-Wallis rank sum test
+
+data:  dn_ds by Ploidy
+Kruskal-Wallis chi-squared = 12.624, df = 2, p-value = 0.001814
+``` 
+### Creating Figure 3
 Since values did not change much between Pn/Ps and Dn/Ds and both graphs represent almost the exact some results, only Dn/Ds was use to create the second graph comparing sexual vs asexaul reproduction (instead of Ploidy)
 ```
 dnds <- read_tsv("DnDs_results.txt", col_types = "cicddd")
@@ -27,16 +70,10 @@ dnds <- dnds %>% mutate(
                 labels = c("sex","asex","asex")))
 dnds %>% ggplot(aes(x = Histone, y = dn_ds, color = Mode)) + geom_boxplot() + theme_classic() + scale_color_manual(values = c("blue","red")) + ggtitle("Dn/Ds between Sexual and Asexual lineages among Histone Genes")
 ```
-## Creating Figure 4 and 5
-The dn/ds values for all four histone genes were displayed per lineage. The first graph displays the ploidy per lineage, the second graph displays which histone gene is represent by each dot
-```
-Dn_Ds %>% ggplot(aes(x = Lineage, y = dn_ds, color = Ploidy)) + geom_point()+ theme_classic() + ggtitle("Dn/Ds of Lineages per Ploidy") + scale_color_manual(values = c("red","blue","yellow")) + theme(axis.text.x = element_text(angle = 90, size = 8))
-Dn_Ds %>% ggplot(aes(x = Lineage, y = dn_ds, color = Histone)) + geom_point()+ theme_classic() + ggtitle("Dn/Ds of each Lineage's Histone Genes") + theme(axis.text.x = element_text(angle = 90, size = 8))
-```
-# Stastical test 
+### Stastical test 
 only a statical test was ran on Dn/Ds results comparing asex and sex values from Figure 3. 
 Numerical lists of Dn/Ds values from sexual and asexaul snails had to be created
-Wilcox rank sum test was ran with Sex and Asex Dn/Ds values;
+Wilcox rank sum test was ran with Sex and Asex Dn/Ds values
 ```
 asex<- filter(dnds, Mode == "asex")
 view(asex)
@@ -54,14 +91,98 @@ X <-as.numeric(x[[1]])
 view(X)
 Y<-as.numeric(y[[1]])
 view(Y)
-wilcox.test(X,Y,alternative = "greater")
-```
-Output should look like
+# Test that X<Y
+wilcox.test(X,Y,alternative = "less")
 
-```
-Wilcoxon rank sum test with continuity correction
+	Wilcoxon rank sum test with continuity correction
+
+data:  X and Y
+W = 974, p-value = 0.003359
+alternative hypothesis: true location shift is less than 0
+# Test that X does not equal Y
+wilcox.test(X,Y,alternative = "two.sided")
+
+	Wilcoxon rank sum test with continuity correction
+
+data:  X and Y
+W = 974, p-value = 0.006718
+alternative hypothesis: true location shift is not equal to 0
+# Test that X>Y
+wilcox.test(X,Y,alternative = "greater")
+
+	Wilcoxon rank sum test with continuity correction
 
 data:  X and Y
 W = 974, p-value = 0.9967
 alternative hypothesis: true location shift is greater than 0
  ```
+To test the sex and asex values for each individual histone genes,
+filtering and numerical lists had to be created.
+Then a Wilcox rank sum test was performed for each histone gene, only testing for X < Y. 
+```
+# Test H2A that sex < asex 
+Ah2a <- filter (asex, Histone =="H2A")
+A.2a <- select( Ah2a, dn_ds)
+A_2a <- as.numeric(A.2a[[1]])
+Sh2a <- filter (sex, Histone =="H2A")
+S.2a <- select( Sh2a, dn_ds)
+S_2a <- as.numeric(S.2a[[1]])
+wilcox.test(S_2a,A_2a,alternative = "less")
+
+	Wilcoxon rank sum test
+
+data:  S_2a and A_2a
+W = 62, p-value = 0.1061
+alternative hypothesis: true location shift is less than 0
+
+# Test H2B that sex < asex 
+Ah2b <- filter (asex, Histone =="H2B")
+A.2b <- select( Ah2b, dn_ds)
+A_2b <- as.numeric(A.2b[[1]])
+Sh2b <- filter (sex, Histone =="H2B")
+S.2b <- select( Sh2b, dn_ds)
+S_2b <- as.numeric(S.2b[[1]])
+wilcox.test(S_2b,A_2b,alternative = "less")
+
+	Wilcoxon rank sum test
+
+data:  S_2b and A_2b
+W = 49, p-value = 0.02824
+alternative hypothesis: true location shift is less than 0
+
+# Test H3 that sex < asex 
+Ah3 <- filter (asex, Histone =="H3")
+A.3 <- select( Ah3, dn_ds)
+A_3 <- as.numeric(A.3[[1]])
+Sh3 <- filter (sex, Histone =="H3")
+S.3 <- select( Sh3, dn_ds)
+S_3 <- as.numeric(S.3[[1]])
+wilcox.test(S_3,A_3,alternative = "less")
+
+	Wilcoxon rank sum test
+
+data:  S_3 and A_3
+W = 59, p-value = 0.08113
+alternative hypothesis: true location shift is less than 0
+
+# Test h4 that sex < asex 
+Ah4 <- filter (asex, Histone =="H4")
+A.4 <- select( Ah4, dn_ds)
+A_4 <- as.numeric(A.4[[1]])
+Sh4 <- filter (sex, Histone =="H4")
+S.4 <- select( Sh4, dn_ds)
+S_4 <- as.numeric(S.4[[1]])
+wilcox.test(S_4,A_4,alternative = "less")
+
+	Wilcoxon rank sum test
+
+data:  S_4 and A_4
+W = 57, p-value = 0.06704
+alternative hypothesis: true location shift is less than 0
+```
+### Creating Figure 4 and 5
+The dn/ds values for all four histone genes were displayed per lineage. The first graph displays the ploidy per lineage, the second graph displays which histone gene is represent by each dot
+```
+Dn_Ds %>% ggplot(aes(x = Lineage, y = dn_ds, color = Ploidy)) + geom_point()+ theme_classic() + ggtitle("Dn/Ds of Lineages per Ploidy") + scale_color_manual(values = c("red","blue","yellow")) + theme(axis.text.x = element_text(angle = 90, size = 8))
+Dn_Ds %>% ggplot(aes(x = Lineage, y = dn_ds, color = Histone)) + geom_point()+ theme_classic() + ggtitle("Dn/Ds of each Lineage's Histone Genes") + theme(axis.text.x = element_text(angle = 90, size = 8))
+```
